[package]
name = "movie-review-comments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
solana-program = "~1.15.2"
borsh = "~0.9.3"
thiserror = "~1.0.31"
spl-token = { version="~3.5.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="~1.1.3", features = [ "no-entrypoint" ] }


[lib]
crate-type = ["cdylib", "lib"]